fixed scrollbars

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,9 +70,9 @@ a{
     width: 100%;
     height: 100%;
 
-    overflow-y: scroll;
+    overflow-y: auto;
 
     -webkit-box-shadow: inset 5px 5px 16px -18px rgba(66, 68, 90, 1);
--moz-box-shadow: inset 5px 5px 16px -18px rgba(66, 68, 90, 1);
-box-shadow: inset 5px 5px 16px -18px rgba(66, 68, 90, 1);
+    -moz-box-shadow: inset 5px 5px 16px -18px rgba(66, 68, 90, 1);
+    box-shadow: inset 5px 5px 16px -18px rgba(66, 68, 90, 1);
 }
